[package]
name = "forcebear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 这都是cargo book里面的
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
bip0039 = "0.10.1"
clap = {version = "3.0.0-rc.10", features = ["derive"]}
hex = "*"
libsecp256k1 = "0.7.0"
num_cpus = "1.13.1"
reqwest = {version = "0.11.8", features = ["blocking", "json"]}
tiny-hderive = "0.3.0"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
tokio = {version="1.18.2",features=["full"]}
trompt = "^0.0.4"
once_cell = "1.10.0"
crypto2 = "0.1.2"